# hloenv

./: .altgraph_configure.bazelrc  .bazelrc  .gitignore  .gitlab-ci.yml  .hloenv_configure.bazelrc  BUILD  Makefile  README.md  WORKSPACE  compile.sh  compile_wheel.sh  setup.cfg  setup.py
altgraph/: BUILD  __init__.py  gpu_backend.h  hlo_env.cc  hlo_env.h  hlo_graph.cc  hlo_graph.h  hlo_graph_test.cc  hlo_module.h  hlo_pass_defs.h  py_hlo_env.cc  py_hlo_env.h  py_hlo_graph.cc  py_hlo_graph.h  py_hlo_ir.cc  py_hlo_ir.h  py_hlo_module.h  py_hlo_passes.cc  py_hlo_passes.h  schedule.h  schedule_pass_defs.h  xla_compile.cc
altgraph/evaluation/: BUILD  evaluator.cc  evaluator.h  main.cc
altgraph/python/: BUILD  __init__.py  py_hlo_env.cc  py_hlo_env.h  py_hlo_graph.h  py_hlo_passes.cc  py_hlo_passes.h
altgraph/utils/: BUILD  hlo_utils.cc  hlo_utils.h
docs/: .buildinfo  altgraph.html  conf.py  examples.html  examples.rst  genindex.html  index.html  index.rst  intro.html  intro.rst  objects.inv  py-modindex.html  reference.html  reference.rst  reference_pass.html  reference_pass.rst  release_notes.html  release_notes.rst  search.html  searchindex.js  xla_passes.html  xla_passes.rst
docs/_autosummary/: altgraph.html
examples/: always_pick_first.py  always_pick_first_rewrite.py  general_fusion_pipeline.py  hlo_play.py  uniform_policy.py
hlo/: BUILD  __init__.py
hlo_tests/: BUILD  hlo_ir_test.py
hloenv/: BUILD  __init__.py  gpu_backend.h  hlo_env.cc  hlo_env.h  hlo_graph.cc  hlo_graph.h  hlo_module.h  hlo_pass_defs.h  hlo_rewrite_graph.cc  hlo_rewrite_graph.h  pip.bzl  schedule.h  xla_compile.cc
tests/: BUILD  cycle_detection_test.cc  evaluator_test.cc  extract_test.sh  hlo_env_test.py  hlo_graph_test.cc  hlo_ir_test.py  pass_pipelines.py  test_rewrite.py
(+114 files in other folders)
