[metadata]
name = altgraph
author = "sail developers"
author_email = "sail@sea.com"
description = "altgraph"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.insea.io/sail/aisys/altgraph.git
project_urls =
    Bug Tracker = https://git.insea.io/sail/aisys/altgraph/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

scripts = altgraph/extract_subgraph

[options]
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
include =
  altgraph

[options.package_data]
altgraph = *

[yapf]
based_on_style = yapf
spaces_before_comment = 2
dedent_closing_brackets = true
column_limit = 79
continuation_indent_width = 2

[flake8]
exclude =
    .git
indent_size = 2
