[metadata]
name = hloenv
version = 0.0.1
author = "sail developers"
author_email = "sail@sea.com"
description = "hloenv"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sail-sg/hloenv.git
project_urls =
    Bug Tracker = https://github.com/sail-sg/hloenv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

scripts = hloenv/extract_subgraph

[options]
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
include = hloenv*

[options.package_data]
hloenv = python/*.so
  *

[yapf]
based_on_style = yapf
spaces_before_comment = 2
dedent_closing_brackets = true
column_limit = 79
continuation_indent_width = 2

[flake8]
exclude =
    .git
indent_size = 2
